--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,6 +1,8 @@
 name: Generate SBOM with Snyk
 
+# Allow the workflow to be manually triggered
 on:
+  workflow_dispatch:  # This enables manual running of the workflow
   push:
     branches:
       - main
